# ChangeLog for app-accessibility/espeak
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/espeak/ChangeLog,v 1.111 2013/09/22 20:14:41 williamh Exp $

  22 Sep 2013; William Hubbs <williamh@gentoo.org> espeak-1.47.11.ebuild:
  Add overrides for AR and CFLAGS, convert a call to make to emake, use the S
  variable instead of "cd src" in the src_* functions and make some cosmetic
  changes. Thanks to ago for pointing these out. This fixes bug #484852.

  12 Jul 2013; William Hubbs <williamh@gentoo.org> espeak-1.47.11.ebuild:
  remove error message since "rm -rf" does not fail

  12 Jul 2013; William Hubbs <williamh@gentoo.org> espeak-1.47.11.ebuild:
  remove the blocker so someone can be running espeak when they upgrade

  12 Jul 2013; Patrick Lauer <patrick@gentoo.org> espeak-1.47.11.ebuild:
  Add blocker to avoid manual file deletion stupidity

*espeak-1.47.11 (11 Jul 2013)

  11 Jul 2013; William Hubbs <williamh@gentoo.org> +espeak-1.47.11.ebuild:
  version bump for bug #476462

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> espeak-1.46.01.ebuild:
  Add ~arm, wrt bug #449220

  31 May 2012; Zac Medico <zmedico@gentoo.org> espeak-1.42.04.ebuild,
  espeak-1.45.03.ebuild, espeak-1.45.04.ebuild, espeak-1.46.01.ebuild:
  inherit multilib for get_libdir

  08 Mar 2012; Brent Baude <ranger@gentoo.org> espeak-1.45.04.ebuild:
  Marking espeak-1.45.04 ppc64 for bug 391417

  28 Feb 2012; Brent Baude <ranger@gentoo.org> espeak-1.45.04.ebuild:
  Marking espeak-1.45.04 ppc for bug 391417

  01 Jan 2012; Raúl Porcel <armin76@gentoo.org> espeak-1.46.01.ebuild:
  Add ~ia64

*espeak-1.46.01 (18 Dec 2011)

  18 Dec 2011; William Hubbs <williamh@gentoo.org> +espeak-1.46.01.ebuild:
  version bump and add runtime dependency on media-sound/sox for #391679.

  04 Dec 2011; Raúl Porcel <armin76@gentoo.org> espeak-1.45.04.ebuild:
  alpha/ia64/sparc stable wrt #391417
