@@ -10,13 +10,14 @@ EBUILD espeak-1.42.04.ebuild 1974 SHA256 dcae748864f34fde8cf2cd110ad1c0631d66c23
 EBUILD espeak-1.45.03.ebuild 1926 SHA256 fe533c6ca9c6c815fb31008a4f0fef15a0e3a2067a858a773cf8b280741de631 SHA512 b26ac4bda8b78260bdb691219f99b9314f4e3635a266693226cc204085dfb1413387a08fca1b85b9f647eff8ba20329eefee6875a60e4378d26599456744c1b1 WHIRLPOOL 8e9a16ce16015508f1f44c8033fc490693c0ef5510325d2b9216582e6942970059f08e9631fe7196f59649e056229b1f4df4d154258b59376be5d7cfd2f8a40c
 EBUILD espeak-1.45.04.ebuild 1918 SHA256 6909a3d5436e69aca518280721c22cb59229b6d3375ff75029aac5fc181faee2 SHA512 1a4fbb3455d19711debc79b1b809199b95dc47ef75f22ad7dee73f1a3ac10ebed79c80d30a8f3777d8b70b1630445cae988c80efced04a226b314e4e5f43338a WHIRLPOOL f23ac11d01c51d5a2ef5c3b75fe65bb14d31a45f1865498675b13502e863a4b9473eb821c586e03b94176167bb86f921c8f002f42e330f06146ca05bacebb588
 EBUILD espeak-1.46.01.ebuild 1942 SHA256 8bf7192b9ed081842e5956ecf9067af6e7786d7f90722ea78a04594376e7feed SHA512 0627f0681372c871be5b32ba5a57b3b8fa7fc7e3a807bffb96f92afef1b42b66a0a342f9eaf65dbe61715e53f9afbf05176f3c17b0a3ae57cf4826570fa9d0d7 WHIRLPOOL 26f70f3445889afaeefc1fdfa855d67e6d946d92b59797f49db1adfe12b74b07666fe5af44482c1c0982f29d1e1553bda2b3799fbeabbb17043ba0159a1c52d8
+EBUILD espeak-1.47.11-r1.ebuild 2360 SHA256 f1800506899a909cde942363c725021a6a6f25addd7fdcd7383a6cd441395e2d SHA512 93472dc44dd0495ce33c3f613879e162ef48f80c3dddc2f561ed3d2fd4b573675d4ae2d2ee36c894475bdc63b1713dbe49ce9735d9ec36a04dec2975fd3e8c2c WHIRLPOOL 554a0b1c6995eedf59b314b606e15117c2371c54875e53c5e575176bd17e109f476d9ba380c4dc90bdde66d36d6dcd49f29bf912aed195c63b4ba3b94363fa2d
 EBUILD espeak-1.47.11.ebuild 2156 SHA256 01d536f21cb67567c1d55b47353827e15cda14bd4c942411663d82f2c7e6b699 SHA512 6fa42b6af42fa19dc4d1413e5361326979170c5228ccc8ad77915b2a876368ac4b8470fe6b8b2cf7bcf3c6b9b098cc393b79e4ae2599ee8329540d72d79bd155 WHIRLPOOL 946ae0db5e28a74e666d859e2329b6f79de676ca5e7c7d6f162294469f889aa0e3c263468a0820a5546a3b0d4340c20a729c897308fc94fe3be251a254916723
-MISC ChangeLog 15240 SHA256 5dbbedbe6e699bcf98bf1faffde9a4b82fb54d6b8717f7291ae499f3df2d7fd8 SHA512 c195961cd7da1406e5cfc452ef707395e08bb58f9ac756de9ac11b2002e7112fb4dda56a1df249ed5adb30e921116113dd887725310890b6f2ad75e3d8d908f3 WHIRLPOOL de0cdfc1bf139eb2c085c9daa25cabb573ca4a3e2ebc9f67dc0ccbab490b9e963d536371969a9b563bf2aeefe18cb1d4d901f5f7c5b7cd216d3e250d2cfad434
+MISC ChangeLog 15393 SHA256 de190ae6b0dbe0e9b16c3abd58330e572c6c956b9ca258592d67cf7fa4cd717b SHA512 733e75b20e542835928408ea09252a8b2dd45f7c4d20dd7ba8552b8894cacb3d3a8f9372196f7ad82fee407ef10ee1fc2e92243a2cbdf54a37e9a2352eb43c2c WHIRLPOOL 5ae183aef282bfc00eb4537655ef4edf104cfbc00002376904e32f8198a30af038562d450bfaf4871b8decb64fd54282bd3fa8db9d9d311d7eedda69981b4bb9
 MISC metadata.xml 229 SHA256 b128d301356b3f98f1d6093b4401c36143ff55fc62636612567b0995739b9e66 SHA512 bd12bd8878fa253afe1f030863335b920b00e7cd7f5f551442b9b7fd02fe6c606938b07351bd60ef8a858c3c07da59ea00000c34b8cb49321a499244e423077d WHIRLPOOL 4a865d3061aabfbd49a1a1b11abdab5b44411e86251f560bc7c0eca9982bd230a9226737f0c4afdb5e15426daad16a4c89a4c90a686f0c73122fe56492ee1b53
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlI/T8sACgkQblQW9DDEZTj8QACgoa/Zt0YWXUVxGV3aq2fwBSVi
-VvMAniFVPEBGAGuDJCFwqEOtb47O6l3R
-=fwtA
+iEYEAREIAAYFAlJKSFwACgkQblQW9DDEZTikqACePgI8LNykehEvL3VX4DopnBVD
+ExEAoLgSgTlWkhMdyXWiZxk6WQ2VNaGu
+=ojBs
 -----END PGP SIGNATURE-----
