@@ -9,15 +9,25 @@ AUX libvpx-1.2.0_pre20130625-armv7.patch 1480 SHA256 80518bcba1f7e8dce0a89cf4c69
 DIST libvpx-1.2.0_pre20130625.tar.bz2 1726341 SHA256 61e7a3b0e0587ed899fb5cc8240324a4f578489abf06c8916abcb59d322f6b58 SHA512 198575c2adec26e7772f59eb4915dda2fb0de04ca5980b51057557ba6a15f0fb6ca9a0db583866fcbe2585939b8cc09500642a0aea46ac2b696ec1ae54cf6c7f WHIRLPOOL 194df8c550a302e678aaf0959ea395185aea004206d24b969263ffedf77adfc76f04f5bc89cbbd66e9d7d925e07cedceb698507c92afba8d4096839b6575ae1f
 DIST libvpx-testdata-1.2.0.tar.bz2 43521881 SHA256 41dc3eb8ad0b24177ccc43f7dd6ec7946f78e6aaa5ff94d0883487e02eb4da2c SHA512 77d909435137965d2d13d5bbd053e658664caa035dfc60b2ba91d075a37624ed27d75cac53f013c8043624fc9b56219ad0b0dd20dd4eecc471935b2757110637 WHIRLPOOL 19c3d8d27e03407098f9e9f3120c242b25bea442aa1fb1755b63fce875662ec00942949af3c5e499f6e18ccfef67f18e1403c226b288e925786ef6fc64e112e0
 DIST libvpx-v1.1.0.tar.bz2 1653485 SHA256 9ce074cf4b3bcd9a49ff93e05485b71c273bfc3685a305e55a0e7fa51beb72c5 SHA512 5c165a1a171143f7c406ef899914a353d35f6dec0e3c49eec9a4f3311fd4072dea2e0da8ceb80651ad23e24cdbf2d6da328805bda8be042bbea2c65c9e53eaaa WHIRLPOOL 2dc8164e3f812903a1b52901438857bcdf172cb1d979f1ced45933fc12ffbb0c49e2a6c02b0c6f3360f48b146e1e5c6ea25c1613abafc3089030f6c1e7af92ed
-EBUILD libvpx-1.1.0.ebuild 2727 SHA256 0b805c9f8acf52b69e7c26512d718900479bd85fae616fabb91540251f43f3d9 SHA512 99515d0076a883b587b024a5a61f2a66bc3c289fd54b24552b1bfebd2c75ba2654d5da3d2352dfcb1c7064dfe473ee2e19d7dff22fe115d4d669341b955a8ef2 WHIRLPOOL 42a12568cee9d408a40db09f210fe1f6d152d2573d0598ba512e327d80da5d039334a428402285678f31470d3405a38ff8e91192bc8ec74faa92ead448c68972
-EBUILD libvpx-1.2.0_pre20130625.ebuild 3481 SHA256 e916ab5099098e496eaa3b4caf39a73f6c8746ec18d4b68630946cb2e90acc3c SHA512 6d68f50b4bd4c6d9ea1d10333097483f3e78d5e2e9ce11d50c7dc480579a10861ca51994a94da9501d04f88c60938e82e3b6a032b332bf3723c930b9530e26bf WHIRLPOOL f2a1c630e65ba007b7fce8cdff7ee1a5d1eb785c93d4b2333c352cc002ebfffe5b7839953d8268cf0b7f03e723a7895f2f35b1c3d3eae61531ec4cc46aa21ef0
-EBUILD libvpx-9999.ebuild 3404 SHA256 d65c8d8f00b79d90c03dba629b88e42f3e781cd41f212193ad275b1e69b25a3f SHA512 f87dacfa6b6b98065f24367e5b6ea6d25cf85268070ea92aa8359a260188cd292146e9f8a23c6959ccc6099238629d940281e60d1fac82383e62bb2b35298a52 WHIRLPOOL 57d24dee259e0c27047f57703450212db825865a664c05c0309b005c101670cec8acf0c5b2b755faa0950756bbe6aae27fe93fbd36cbf9aba481c304440b87df
-MISC ChangeLog 14342 SHA256 a076fa1a64a112b82ce03977dbee8a1e97679ccf0640be98f4707f77b957ee0e SHA512 228c6051c477219cb5e628786136368dc267f5427a827e24a7b57bfa5ba92700464edae31a3d87be33899737cd9008c21cd0eea537123006d7d2f7150b69c8f6 WHIRLPOOL dff349de9d7693cc118a17cc7b5f7508a30a88ea5c6d72d80ec57524ada4d4d20e7a8b4142be7a4ad804b2ae8fef339261ae26494141391cc4b90a799e10f503
+EBUILD libvpx-1.1.0.ebuild 2733 SHA256 1b330feb758f7878f4745d13723d31d2071fed917950476c0aceb1af593a03c6 SHA512 9fbbfebb0db90261363524eae67e9af8d5e66ed5e536a8f1f3406f69038ccd38487cf281f51595648dd661cde4de7545a91e079bfa33223a2a14b6e7ebe4ff7a WHIRLPOOL a5616e888b705f64dad9085b6d4027f60a3e6cd8a7431e11ecf93af8c94e8e6b9efd8820a85fa1a17a49f3d158db71e77378e10ebc85003448b5133957586dd7
+EBUILD libvpx-1.2.0_pre20130625.ebuild 3489 SHA256 b4dfd3b311e045b64f7d3b882d87216a94b508955b2455c6094d2928bb5a8bed SHA512 7122ec540f9ce9e67f6e3857df0b7ebfc85a3e7f96f70f40200d80101ab4891ee03f996b134a9ebfa9baf9a6ab0128a3494c9d08399a177c0365600be89db5c5 WHIRLPOOL 4ca3248dea2abf1dd4f06579e44c3ceac41be767825bfb228e543696c1ec7448f3e74597ca1d2e8a6467b81002e65a27c3fa0a96810aed5384325664d4dd733f
+EBUILD libvpx-9999.ebuild 3412 SHA256 587ff26f4d01dd9b9869d2f0cbbc3e5f31665a4d1dbd9aaa6254305c2662f12c SHA512 5dffe335b7df616f0f6f46d0abe3b4bc7c5230c09adc342cdfe94dee603953a5015d06bb55a4ac6fd8bb0f7709f8fc09b60385bd22a960a512f381757f3b2577 WHIRLPOOL 05ff2a2557fb026a4a33a1a68ad492a99a2dbf598bb921d273bf152abfad09bc413ebdee8cf798e0ccc447f9f618e1a54e3a36077e5bf27a2e2058b712bea7c1
+MISC ChangeLog 14489 SHA256 b16ad568064c5064b73f53d74b8680ed828f381b18435c2ce3132e90e01775af SHA512 16e68a417ff636878c4d1e648d094b801e7e810964afd137289be5f169df38c7464b061cfeff86602daf316f52b47bf193282c72518f21d46beb9187b969d3b1 WHIRLPOOL 7f3c0d99581e786997d477854f91aeb490d997a2e4ec79455421191624908fc6635f92719c4b18638367a83f3daa166511856948b11924d8331d668cbaddbe09
 MISC metadata.xml 695 SHA256 9ce8ec472b7274e76137dcb0ee7881d478281161e56f5efc622b4a5eb85820e1 SHA512 19c4f1736767b4df3a0262d16a48b8c39aea5748ec7d6f87fde0231fcc26edf4b0953ba3d3ca0af226370481538958e1b37af91e4af4e6913d80d661ccaf3959 WHIRLPOOL 8c69f5f37908c5ed1d2c820a115e5a26a00282754424d0deadee1a05ff783ae8e62c08cb68c98030ca3f242a8fff8b475f1174cf7f9be441379956458376cea5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHv+7AACgkQuUQtlDBCeQIe1QCfRlpjo5H3KvhLcrTZZXU1dXqT
-qh8An2OdtE7rHYaXsOxmarFUHAOtun0f
-=hA0D
+iQIcBAEBCAAGBQJSSlRfAAoJELEHsLL7fEFWaTYQAJtvOP40sw9jXxMdOxxr+E7C
+hRoCrPNxdorz28OxTFNAowVarInKsfNzRrEBhSQr1RIT+cEv6y7JsmPzFHME5kJm
+/7IwOS+VWPFo1z541HyEKT0wNYNON2i7o1Osh76V1Jm9SKZHzi7/raTur16LXnSo
+c+8tWBz+zdL5+IzzMah4zcm7rQbC5xv1lF2MUH1vZ48v1BYNmq2CmfqlIJC0JOzg
+jdNg/dO/VBub3+6WmqI7bhWG7FjS7l2f8NyxaHq+zTwBqYY4SBnhV7Q4PSh7lMh0
+RY6r3B+T2h8qbFCIqU5LdzmejjGPV0xKIbBWGC4rRUcW8rghNotX2H+qq0cw1fDQ
+N8ga/7BFlIDK+sqDbwdjkCNi9HqNyiS9cjUHsNQ2TIS6zuynhnVCUPKUZFiZA+Aa
+oNxrCNmZ/9mWm4EvLnF9iYIFZwJ0gVR+I5pwBGqHQ7Gtyybutv0GXlRgWls63OMS
+eLwZgg1ZJKhDIvuCx5LuUp2Z2DdHuiy6XpkivwfPs5yZVFgAU/zCiHNP+s36ba5m
+thxfQgak+wGOmt8QrVo5z97v5CddagDjZmkYgicgvH/ZmogAE7K7Xf39DwV8abs4
+nZetuxw3rSFZZWLsehPCU/lahbIRV5Ic3EkKu0E4a9+8MGy+Rn029AUDKl5ZukbR
+bQ3MZx2ezLR+yO0DbDPr
+=GZ0c
 -----END PGP SIGNATURE-----
