@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst preinst prepare
+DEPEND=portaudio? ( >=media-libs/portaudio-19_pre20071207 ) pulseaudio? ( !portaudio? ( >=media-libs/portaudio-19_pre20071207 ) media-sound/pulseaudio ) app-arch/unzip
+DESCRIPTION=Speech synthesizer for English and other languages
+EAPI=5
+HOMEPAGE=http://espeak.sourceforge.net/
+IUSE=portaudio pulseaudio
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux
+LICENSE=GPL-3
+RDEPEND=portaudio? ( >=media-libs/portaudio-19_pre20071207 ) pulseaudio? ( !portaudio? ( >=media-libs/portaudio-19_pre20071207 ) media-sound/pulseaudio ) media-sound/sox
+SLOT=0
+SRC_URI=mirror://sourceforge/espeak/espeak-1.47.11-source.zip
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=1d729f6e52feadd6bcb232c477e6c99d
