@@ -10,4 +10,4 @@ REQUIRED_USE=sse2? ( mmx )
 SLOT=0
 SRC_URI=http://webm.googlecode.com/files/libvpx-v1.1.0.tar.bz2
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	46e34faf3660a9fa3d374b042130fb20	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=01f02e5f34282a4ad33c3b36a43a0fa3
+_md5_=89285291bfae64b32c7adb761fe7f2b1
