@@ -11,4 +11,4 @@ REQUIRED_USE=sse2? ( mmx ) ssse3? ( sse2 )
 SLOT=0
 SRC_URI=mirror://gentoo/libvpx-1.2.0_pre20130625.tar.bz2 test? ( mirror://gentoo/libvpx-testdata-1.2.0.tar.bz2 )
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multilib-build	41bbd4d930dec170f24e1bf83cd1aca2	multilib-minimal	09c985fcba99d0f16fc7161fffa80730	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c0882b96b060693ab273972d107003a9
+_md5_=c68ccb0cf86b9182b88246e984f599c8
