@@ -1,17 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX x11vnc-0.9.13-shm-cleanup.patch 1256 SHA256 86d86614cf64899c8da507b35b3131e39ce8f8e34848d99ad33d21314577be64 SHA512 8acccb3c543f8656e633b8c30fe037e15d50db12dc7c2aea07b04d01c8591a619f712327260c3e3b22991fcab01c34be239803ef02431bb4882d18b85f856b76 WHIRLPOOL 44adc1bc044de10f6b76478eaa80704db2b328e794693cc5cc2afec15c6bc7a5b2179ac102b3822d63bf9cc6a55387deff748457fb784315f1203d20b85c57b5
+AUX x11vnc-0.9.13-shm-cleanup.patch 1262 SHA256 2e69b15f9d3a466181cef7ef0e5963449d4fdc473c9933d4349ddf37a6ae3521 SHA512 fe63d11e1f81861438b9d6469cbe6545c5351a5791f8d2ac4367fb540ade1e53e51cad8369316f95bd27db47d11b8e925bedf9941128133398d2bedbb61d2946 WHIRLPOOL 35467350663485c803287da7c467652bd096b88434ae2cefaa9a9af4683531a9a2102687e48a95c3f2285758140e78461036273eb2f686718fc6486e691338ed
 AUX x11vnc-0.9.13-warnings.patch 1363 SHA256 4db7b0b699e009362eaef6be222041cc333541273cf47db52dc71e521a0c4ffe SHA512 42de5aaa3f5f67f3f7f0b8af693811d6070bb05270a3b41e88705c09e436e37beb343433d5a4cd2d6922f2eb7e67c1584de1278b0ed0f92b3d01f2f233050ab1 WHIRLPOOL 408f7e7f887703aae39c9ffff70cdb7334cbb9d410d80d9b36c9cdfbef0aeaca8ff1dc1d53fb7c1f53c37cb90959b3e8815d5dc077eadf66deea5bb799ff8de7
 DIST x11vnc-0.9.13.tar.gz 2853769 SHA256 f6829f2e629667a5284de62b080b13126a0736499fe47cdb447aedb07a59f13b SHA512 7b24e495f29122032e1c8ced7f7d8e0a56a2a8263e761a50725320742c99a0fcd5680d13038dd5d47e1c05d3b889d0caa13ba0b1aeda6fa42d5fb5ef3c43f908 WHIRLPOOL d812b257e70d6caccc6669c7fca89cacc590b5908c7877f62bdd14a159b0712b5b60e8587b6a385a5a68c46e15296ab838b07196786ac354fccb0759725685c4
 EBUILD x11vnc-0.9.13-r1.ebuild 2118 SHA256 a26f9ee6f59685ff44e11821e6148996dedf92a8466b2812b8ab5795f2630d12 SHA512 051dcfa601870094f7693498ceab8425279de4a7a64a106c53906d8f760897a05222a5d8da9ef85dbd6b884e389e98938e6c71612b2e28ad6bb4c84ebe690428 WHIRLPOOL 394bdd3694cc2a4755a6d96bf33c30d7530075183f32ab6a54078cac3a42aeaeb6cb4f33f26d92a600abd62caab879c1ede977c6ff4b4521ffd3d111103f777d
 EBUILD x11vnc-0.9.13.ebuild 2047 SHA256 82a2e0167e43ab2947fa8314e7165f93475b8b27fa4b9b50c4f2fbf0a9ed9a63 SHA512 8445604f172f4650118d3514f619529eed39576fc1fc4393b118025c1eff98b56ec55718de76f445c4b5ac32915291ae4ea7171bf4e7871d1131d8a06116d9ae WHIRLPOOL 6c1381128ee558b796ac512b1d284e2480e5d84e929a856e9984fb2f98a965d23f2aed22743b93f47b1d06e68ce109c743831bd1b6893373b65fd02fd5ba8cf0
-MISC ChangeLog 14436 SHA256 7e7d1c933474b66955b56800b48d7aed947bb4d27900b55c41da73778e0ba96e SHA512 bc13f97c6ec1b3d65ac452a137649072011571584bb1c2a17a364690d76d445ce152446fbf7c2b852d7d6ff1f45df9a9c67c9ec1a7d9b15a5b26b7672564eea6 WHIRLPOOL 89570a8cb4ed5c2f527062904331dc9fc10e84ad340c588cacf6349be75a52c70d92204aabf12d71815c54390e836a646f4fe4921e541d77212669ba660578b0
+MISC ChangeLog 14552 SHA256 9212b18b9acf090659408d176b3cb79b3c137c5058db10462eea9c34a1bf7a41 SHA512 2c76d9508f10cc7450f76b092c07de4479df6264b7c589eaab2349fe9a2b468d19120bd871f181e0eb3aea99d5ca4413872e182128118cb9c4db8632e21c4540 WHIRLPOOL 4b96bb3e0ea79cc309f1ea1ad24b324bdf0e280717ee41630e8796c2b63319a657e2e7f67fd6267ccd2d00269d15c62f370ec797398d03710adc58c478c96000
 MISC metadata.xml 618 SHA256 0bad0f2d7e69c5a3c3012b95146f82e5928b1c49aa0039e14d168871affe3562 SHA512 c3470d9343a19d4e51846a113b62a81962d8c15d4ad063ec7cdb17ec69df356c06fa0e9944d69abd78942843bc87eee816999377b45b01b8cd3db60ed20fe968 WHIRLPOOL e11a756a1726382ae62681b26c1001ad69bb7d492ea74281c618ed90a37bd47eb377c5dd524da5d474fbb922fe202d1c8bc1ccd3f70e93f28a4c61234cd6b169
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlEnyWEACgkQ/ejvha5XGaOWzwCgrHbNgr4pgmFqGokkecz/XvM/
-7ZgAnRrDhmbDKuu4i0lNI2Hf1r9Yrmfe
-=ZXn7
+iQIcBAEBCAAGBQJSSlQHAAoJELEHsLL7fEFWTc0P/3KJ59qfJZTdpTYfQMWMjD9z
+vAoRXt4oENJZYdXNH3uTxz0bnFIHOJ4ACxyghYQHLzmS1//05wGyJIn1+ztnDQlB
+/xKPphiBiWLtQ1lVv8g+FO0nAvVfa9AInSQRT6AD2N/moUxi5JJdQwIEuxcO30Vv
+cyEp2Ec796bUzqZMzoS4gmFNRUvGKLE/VnxGZSJ4R2L6THsWOcF5SFFbirRPfgFo
+m/Gu1d7xc/olVO6ZdMwZ0KqTkO7JdVkayx7XCHhIgG2rrG9K6KVR70DZlqbICGyP
+7b+w9+RaG1vPOpkdD/qSvZwTs5fAgxdJRE7ktIrSBVuNqnJrWTCNJVhJ6VBmqRSC
+tgw6C7fsyYRb698EHlTYSroLLJ7S14VtSeu5U4/E1AdS7vnNPLolLsbKlqhMD5PR
+Hc4O83iD+wbAuSolG7d0tOWODc7Vcu6pIqjTubRvYytFyy7Ydpedy0VqtNFaS656
+PDU1CgrX4YPvdkMX1djm4ZPdfwltrA1DyITMapKc2c1L9/YeE2VncH8cK6/tupbd
+KD2vAMXTEUCykhZR8IdlUY0TqCH5W8O3zygk0GYlfpkufNTgU72esMxVn5nhl2WQ
+6ArcuSqvZ1At8rV9juwtOqWYzxcvhWsKH8yT/WpzHzN7b2sCch8047O3FqTtLH2P
+5Cx1m6YyaZeYaDeWyO/E
+=D2Ps
 -----END PGP SIGNATURE-----
