@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libvpx
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libvpx/ChangeLog,v 1.96 2013/07/24 16:07:01 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libvpx/ChangeLog,v 1.97 2013/10/01 04:49:26 vapier Exp $
+
+  01 Oct 2013; Mike Frysinger <vapier@gentoo.org> libvpx-1.1.0.ebuild,
+  libvpx-1.2.0_pre20130625.ebuild, libvpx-9999.ebuild:
+  Update Chromium URLs.
 
   24 Jul 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> libvpx-1.1.0.ebuild:
   Apply fix for bug #465988 to stable.
