@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/x11vnc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/x11vnc/ChangeLog,v 1.107 2013/02/22 19:39:11 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/x11vnc/ChangeLog,v 1.108 2013/10/01 04:47:59 vapier Exp $
+
+  01 Oct 2013; Mike Frysinger <vapier@gentoo.org>
+  files/x11vnc-0.9.13-shm-cleanup.patch:
+  Update ChromiumOS URL.
 
   22 Feb 2013; Zac Medico <zmedico@gentoo.org> x11vnc-0.9.13-r1.ebuild:
   Add ~arm-linux keyword.
