@@ -1,6 +1,11 @@
 # ChangeLog for app-accessibility/espeak
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/espeak/ChangeLog,v 1.111 2013/09/22 20:14:41 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/espeak/ChangeLog,v 1.112 2013/10/01 03:58:08 williamh Exp $
+
+*espeak-1.47.11-r1 (01 Oct 2013)
+
+  01 Oct 2013; William Hubbs <williamh@gentoo.org> +espeak-1.47.11-r1.ebuild:
+  Fixes for bug #485934 and bug #485936
 
   22 Sep 2013; William Hubbs <williamh@gentoo.org> espeak-1.47.11.ebuild:
   Add overrides for AR and CFLAGS, convert a call to make to emake, use the S
